--- a/src/view/index.html
+++ b/src/view/index.html
@@ -4,11 +4,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="%PUBLIC_URL%/../css/main.css">
     <title>Document</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="../js/function.js"></script>
+    <script src="../js/index.js"></script>
   </body>
 </html>
