--- a/src/css/mangaModel.css
+++ b/src/css/mangaModel.css
@@ -21,6 +21,6 @@
     font-size: 16px;
     color: white;
     background-color: rgba(0, 0, 0, 0.4);
-    width: 100px;
-    padding-left: 2px;
+    width: 98px;
+    padding: 2px;
 }
