--- a/src/css/viewModel.css
+++ b/src/css/viewModel.css
@@ -1,5 +1,5 @@
 .view-id{
-    margin-top: 15px;
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -54,13 +54,13 @@
     width: 370px;
 }
 
-.view-list{
+.view-list{    
     border: 2px solid black;
     margin: 15px;
     margin-top: 15px;
     margin-bottom: 20px;
     padding: 10px;
-    overflow-x: auto;
+    height: 40px;
 }
 
 .view-list-title{
@@ -74,7 +74,11 @@
 
 .view-list-data{
     margin: 5px;
-    margin-top: 10px;
+    white-space: nowrap;
+    display: flex;
+    flex-wrap: wrap;
+    height: 40px;
+    overflow-y: auto;
 }
 
 .view-synopsis{
@@ -96,7 +100,19 @@
 
 .view-synopsis-data{
     padding: 5px;
-    height: 120px;
+    height: 115px;
     overflow: auto;
 }
+
+.view-controller{
+    position: fixed;    
+    z-index: 1;
+    margin-left: 10px;
+}
+
+.view-controller img{
+    height: 40px;
+    width: 40px;
+}
+
 
