--- a/src/view/index.html
+++ b/src/view/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <base href="/"/>
   </head>
   <body>
     <div id="root"></div>
